fix(hacktivity): withhold undisclosed report titles from the public feed
The feed is served to anonymous callers, and a row reaches it when a
triager recognises a finding -- which happens long before, and often
without ever, that report being disclosed. Two paths published the title
of a live vulnerability to whoever asked.

The mapper returned the raw title on every row. It now returns null
unless the report is DISCLOSED; severity, weakness, payout, researcher
and program still travel, so a card renders without naming the bug.

Search matched undisclosed titles too. Nulling the response alone would
have left that open: a caller who cannot read a title could still
recover it a guess at a time by watching which terms return the row.
Title search is now restricted to disclosed reports, and the query
parameter documents that.